
* Fix issue:64 where progressing an issue can appear to alter the time remaining incorrectly
* Fix issue:62 - don't reset the platform in an xcode project unless the info file is being parsed
* Fix issue:agile-app-issues:1 autocomplete issue titles when creating relationships
* Fix some velocity calculations
* Fix issue where restricted users could not edit their own details

2.0-rc1

* Group "other" user dashboard issues by project
* Added issues, milestones and userdashboard endpoints to the available APIs
* Add Gradle project support
* Add QR codes for easier access to app install links
* issue:agile-app-builds:1 Build projects once their import is complete

* Fix issue where time logged when resolving an issue was not being saved
* Fix issue where eclipse android projects could not reference local libraries
* Issue:57 Random ordering of durationworkeds if times match
* Various DB optimisations
* Issue:55 Include build config name in artefact upload events and build events
* Correct encoding of JSON API (to UTF-8)
* Correct rendering of file sizes to IEC standards
* Fix an issue with the file "updates" page hanging
* Fix a problem where projects would simetimes build more than once for a single changeset
* Issue:60 Upgrade progress bar not updating


2.0-beta4

* Add a grouped history page for better visibility of which apps are active
* Better security by hiding email and telephone details from anonymous views
* Deffer (once) builds of maven projects that have a dependency also in the build queue
* Add "never" option to build schedules
* Don't forget the project when displaying an error page
* Issue:42 Filter search results by application

* Fixed marked up text to render URLs as links
* Fix some issues with memory constraints when updating
* Fix possible crashes with the system if setup is not complete
* Improvements to document edit styling to better match document view styles
* Fix issue with hour remaining calculations